# pytruco

./: .gitignore  LICENSE  README.md  bench.py  main.py  main_perspectiva.py  main_test.py  partial_parse.py  pyproject.toml  requirements.txt
canvas/: geometry.py
enco/: __init__.py  codmsg.py  envelope.py  message.py  packet.py  razon.py
partial/: partial.py
pdt/: __init__.py  carta.py  chi.py  envite.py  equipo.py  jugada.py  jugador.py  mano.py  manojo.py  partida.py  printer.py  ronda.py  test_carta.py  test_manojo.py  test_partida.py  truco.py
perspectiva/: perspectiva.py
src/pytruco/: __init__.py  bench.py  testee.py
src/pytruco/canvas/: canvas.py
src/pytruco/enco/: __init__.py  message.py
src/pytruco/pdt/: __init__.py  carta.py  chi.py  envite.py  equipo.py  jugada.py  jugadas.py  jugador.py  mano.py  manojo.py  partida.py  printer.py  ronda.py  truco.py
src/pytruco/perspectiva/: __init__.py  perspectiva.py
tests/: test_carta.py  test_manojo.py  test_partida.py
