[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytruco"
authors = [{name = "JP Filevich", email = "juanfilevich@gmail.com"}]
version = "0.1.0"
description = "Uruguayan Truco engine, simulator, and library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[project.scripts]
pytruco-bench = "pytruco.bench:main"
pytruco-testee = "pytruco.testee:main"

[project.urls]
Homepage = "https://github.com/truquito/pytruco"
Repository = "https://github.com/truquito/pytruco"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
